Fixed Alignment of PlayerToggle and updated code for Menu

--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -103,23 +103,25 @@ body.light-mode {
     justify-content: center;
     align-items: center;
     z-index: 100;
-    animation: slideIn 2s ease-out;
     opacity: 1;
 }
 
-@keyframes slideIn {
+
+
+.banner-content {
+    text-align: center;
+    color: #d9d9d9;
+    font-size: 2.5rem;
+    animation: slideInText 1s ease-out ;
+}
+
+@keyframes slideInText {
     from {
         transform: translateX(-100%);
     }
     to {
         transform: translateX(0);
     }
-}
-
-.banner-content {
-    text-align: center;
-    color: #d9d9d9;
-    font-size: 2.5rem;
 }
 
 .reset-button {
